--- a/NavigationControllers/NavigationControllers/Base.lproj/Main.storyboard
+++ b/NavigationControllers/NavigationControllers/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Team View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="TeamViewController" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kI8-OC-IwE"/>
                         <viewControllerLayoutGuide type="bottom" id="SnP-LE-5rS"/>
@@ -56,10 +56,10 @@
             </objects>
             <point key="canvasLocation" x="491" y="99"/>
         </scene>
-        <!--Team Detail View Controller-->
+        <!--View Controller-->
         <scene sceneID="mwV-A3-UA3">
             <objects>
-                <viewController id="mKz-5K-FLT" customClass="TeamDetailViewController" sceneMemberID="viewController">
+                <viewController id="mKz-5K-FLT" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xRX-zw-Rpb"/>
                         <viewControllerLayoutGuide type="bottom" id="F21-Po-pe8"/>
